--- a/mall-getway/pom.xml
+++ b/mall-getway/pom.xml
@@ -29,7 +29,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>com.rxix.mall</groupId>
             <artifactId>mall-commons</artifactId>
