--- a/mall-getway/src/main/resources/application.yml
+++ b/mall-getway/src/main/resources/application.yml
@@ -17,7 +17,20 @@ spring:
           uri: https://www.jd.com
           predicates:
             - Query=url,jd
-
-#指定注册中心的服务端看
+        - id: product_route
+          uri: lb://mall-product
+          predicates:
+            - Path=/app/product/**
+          filters:
+            - RewritePath=/app/(?<segment>/?.*), /$\{segment}
+        - id: app_route
+          uri: lb://renren-fast
+          predicates:
+            - Path=/app/**
+          filters:
+            - RewritePath=/app/(?<segment>/?.*), /renren-fast/$\{segment}
+# localhost:8070/app/captcha.jpg -->
+# localhost:8080/app/captcha.jpg localhost:8080/renren-fast/captcha.jpg
+#指定注册中心的服务端口
 server:
   port: 8070
