--- a/renren-fast-master/src/main/resources/application.yml
+++ b/renren-fast-master/src/main/resources/application.yml
@@ -28,6 +28,13 @@ spring:
     throw-exception-if-no-handler-found: true
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.56.100:8848
+  application:
+    name: renren-fast
 #  resources:
 #    add-mappings: false
 
